deploy/playwright-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright-ui
  namespace: playwright-ui
spec:
  ports:
    - name: backend
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: playwright-ui
  type: ClusterIP
